--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,7 @@ venv.bak/
 
 # mkdocs documentation
 /site
-
+.vscode
 # mypy
 .mypy_cache/
 .dmypy.json
@@ -160,7 +160,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-/lib
+
 # pytype static type analyzer
 .pytype/
 
